--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,8 +2,8 @@
   "root": true,
   "plugins": ["stylelint-order"],
   "extends": ["stylelint-config-standard"],
-  "customSyntax": "postcss-styled-syntax",
   "rules": {
+    "import-notation": null,
     "selector-class-pattern": null,
     "selector-pseudo-class-no-unknown": [
       true,
@@ -11,10 +11,16 @@
         "ignorePseudoClasses": ["global"]
       }
     ],
+    "at-rule-no-deprecated": [
+      true,
+      {
+        "ignoreAtRules": ["apply"]
+      }
+    ],
     "at-rule-no-unknown": [
       true,
       {
-        "ignoreAtRules": ["function", "if", "each", "include", "mixin"]
+        "ignoreAtRules": ["tailwind", "mixin", "apply"]
       }
     ],
     "no-empty-source": null,
@@ -25,12 +31,6 @@
       "always",
       {
         "ignore": ["after-comment", "first-nested"]
-      }
-    ],
-    "unit-no-unknown": [
-      true,
-      {
-        "ignoreUnits": ["rpx"]
       }
     ],
     "order/properties-order": [
