--- a/package.json
+++ b/package.json
@@ -26,37 +26,36 @@
   "dependencies": {
     "@emotion/react": "11.14.0",
     "clsx": "2.1.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-is": "18.3.1",
-    "react-router": "7.1.3",
-    "react-router-dom": "7.1.3",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-is": "19.0.0",
+    "react-router": "7.3.0",
+    "react-router-dom": "7.3.0",
     "zustand": "5.0.3"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "4.1.0",
-    "@eslint-react/eslint-plugin": "1.25.0",
-    "@types/node": "22.12.0",
-    "@types/react": "18.3.12",
-    "@types/react-dom": "18.3.1",
-    "@typescript-eslint/eslint-plugin": "8.22.0",
-    "@vitejs/plugin-react-swc": "3.7.2",
+    "@antfu/eslint-config": "4.8.1",
+    "@eslint-react/eslint-plugin": "1.31.0",
+    "@tailwindcss/vite": "4.0.12",
+    "@types/node": "22.13.9",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
+    "@typescript-eslint/eslint-plugin": "8.26.0",
+    "@vitejs/plugin-react-swc": "3.8.0",
     "autoprefixer": "10.4.20",
     "dotenv": "16.4.7",
-    "eslint": "9.19.0",
-    "eslint-plugin-react-hooks": "5.1.0",
-    "eslint-plugin-react-refresh": "0.4.18",
+    "eslint": "9.22.0",
+    "eslint-plugin-react-hooks": "5.2.0",
+    "eslint-plugin-react-refresh": "0.4.19",
     "lint-staged": "15.4.3",
-    "postcss-load-config": "6.0.1",
-    "postcss-styled-syntax": "0.7.1",
     "simple-git-hooks": "2.11.1",
-    "stylelint": "16.14.1",
+    "stylelint": "16.15.0",
     "stylelint-config-standard": "37.0.0",
     "stylelint-order": "6.0.4",
-    "tailwindcss": "3.4.16",
-    "typescript": "5.7.3",
-    "vite": "6.0.11",
-    "vite-plugin-checker": "0.8.0"
+    "tailwindcss": "4.0.12",
+    "typescript": "5.8.2",
+    "vite": "6.2.1",
+    "vite-plugin-checker": "0.9.0"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
