--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "preview": "npm run build && vite preview",
     "preview:dist": "vite preview",
     "lint": "eslint --cache --cache-location node_modules/.cache/eslint/",
-    "lint:stylelint": "stylelint \"./**/*.css\" --cache --cache-location node_modules/.cache/stylelint/",
+    "lint:css": "stylelint \"./**/*.css\" --cache --cache-location node_modules/.cache/stylelint/",
     "lint-staged": "lint-staged",
     "postinstall": "simple-git-hooks"
   },
@@ -29,31 +29,31 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-is": "19.1.0",
-    "react-router": "7.6.2",
-    "react-router-dom": "7.6.2",
-    "zustand": "5.0.5"
+    "react-router": "7.6.3",
+    "react-router-dom": "7.6.3",
+    "zustand": "5.0.6"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "4.14.1",
+    "@antfu/eslint-config": "4.16.2",
     "@eslint-react/eslint-plugin": "1.52.2",
-    "@tailwindcss/vite": "4.1.10",
-    "@types/node": "22.15.31",
+    "@tailwindcss/vite": "4.1.11",
+    "@types/node": "22.16.0",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
-    "@typescript-eslint/eslint-plugin": "8.34.0",
+    "@typescript-eslint/eslint-plugin": "8.35.1",
     "@vitejs/plugin-react-swc": "3.10.2",
-    "dotenv": "16.5.0",
-    "eslint": "9.28.0",
+    "dotenv": "17.0.1",
+    "eslint": "9.30.1",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.20",
-    "lint-staged": "16.1.0",
+    "lint-staged": "16.1.2",
     "simple-git-hooks": "2.13.0",
-    "stylelint": "16.20.0",
+    "stylelint": "16.21.1",
     "stylelint-config-standard": "38.0.0",
     "stylelint-order": "7.0.0",
-    "tailwindcss": "4.1.10",
+    "tailwindcss": "4.1.11",
     "typescript": "5.8.3",
-    "vite": "6.3.5",
+    "vite": "7.0.2",
     "vite-plugin-checker": "0.9.3",
     "vite-plugin-compression": "0.5.1"
   },
